--- a/examples/api-gateway/client/home/home.html
+++ b/examples/api-gateway/client/home/home.html
@@ -2,21 +2,29 @@
     .delete-btn { font-size:14px; background-color:red; }
     .buy-btn { font-size:14px; background-color:green; }
     .sm-btn { font-size:16px;}
+    .msgtext {text-align: left; font:18px;}
 </style>
 
 <div class="home">
   <h1 id="logo"><img src="/home/auth0_logo_final_blue_RGB.png" /></h1>
-  <h2>Welcome {{auth.profile.nickname}} to sell your pets!</h2>
+  <h2>Welcome {{profile.name}} to sell your pets!</h2>
 
   <div ng-repeat="pet in pets track by pet.id">
-    <div class="row">
-	   <!--"id": 1, "type": "dog", "price": 249.99-->
-        <div class="col-md-6 col-md-offset-3">We have a {{pet.type}} is for sale for {{pet.price}}</div>
-        <div class="col-md-2" style='text-align:left;'>
-            <button ng-show="isAdmin" class="btn delete-btn" ng-click="removePet(pet.id)">remove</button>
-            <button ng-show="!isAdmin && !pet.isSold" class="btn buy-btn" ng-click="buyPet(pet.id)">Buy!</button>
-            <label ng-show="pet.isSold">sold</label>
+    <div class="row" ng-show="!pet.isSold">
+      <div class="col-md-1 col-md-offset-2" style='text-align:left;'>
+          <button ng-show="isAdmin" class="btn delete-btn" ng-click="removePet(pet.id)">remove</button>
+          <button ng-show="!isAdmin && !pet.isSold" class="btn buy-btn" ng-click="buyPet(pet.id)">Buy!</button>
        </div>
+        <div class="col-md-7 msgtext" >We have a {{pet.type}} for sale for {{pet.price}}</div>
+
+    </div>
+  </div>
+  <div ng-repeat="pet in pets track by pet.id">
+    <div class="row" ng-show="pet.isSold">
+      <div class="col-md-1 col-md-offset-2" style='text-align:left;'>
+          <button ng-show="isAdmin" class="btn delete-btn" ng-click="removePet(pet.id)">remove</button>
+      </div>
+      <div class="col-md-8 msgtext" >Sold a {{pet.type}} to {{pet.soldTo}} for {{pet.price}}</div>
     </div>
   </div>
   <br />
